fix domain user and profile information
